--- a/pages/blog/blog.scss
+++ b/pages/blog/blog.scss
@@ -119,6 +119,7 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
         margin-top: 15px;
+        color: rgba($black, 0.6);
 
         @include mobile {
           font-size: 18px;
@@ -254,12 +255,21 @@
   }
 
   .blog-list-page {
+    padding: 150px 0 50px;
+    text-align: center;
+    background-color: $white;
+
+    .description {
+      max-width: 50%;
+      margin: 0 auto;
+    }
 
     @include mobile {
       padding: 150px 20px 50px;
 
       .description {
-        max-width: 95%;
+        max-width: 60%;
+        margin: 0 auto;
       }
     }
   }
