--- a/pages/blog/blogDetails.scss
+++ b/pages/blog/blogDetails.scss
@@ -120,6 +120,15 @@
         background-color: $white;
       }
     }
+
+    &.menu-white {
+
+      .header-primary {
+        background-color: $white;
+        transition: all 0.5s ease-in-out;
+      }
+
+    }
 }
 
 // markdown-style
@@ -154,17 +163,5 @@
 
   .sidebar {
     min-width: 350px;
-  }
-}
-
-
-.blog-list-page {
-  padding: 150px 0 50px;
-  text-align: center;
-  background-color: $white;
-
-  .description {
-    max-width: 60%;
-    margin: 0 auto;
   }
 }
