--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -67,7 +67,7 @@ p {
   font-size: 20px;
   line-height: 30px;
   letter-spacing: -0.5px;
-  opacity: 0.5;
+  color: rgba($black, 0.5);
 }
 
 .title1 {
